// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Spec Snapshots should render a filled and disabled input 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #19191a;
  border: 2px solid #e8eaed;
  background: #ffffff;
  opacity: 0.5;
}

.c2::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c2::-moz-placeholder {
  color: #9b9c9e;
}

.c2:-ms-input-placeholder {
  color: #9b9c9e;
}

.c2::placeholder {
  color: #9b9c9e;
}

.c2:hover {
  background: #e8eaed;
}

.c2:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c2:hover {
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="false"
      class="c2"
      disabled=""
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an empty and disabled input 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #19191a;
  border: 2px solid #e8eaed;
  background: #ffffff;
  opacity: 0.5;
}

.c2::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c2::-moz-placeholder {
  color: #9b9c9e;
}

.c2:-ms-input-placeholder {
  color: #9b9c9e;
}

.c2::placeholder {
  color: #9b9c9e;
}

.c2:hover {
  background: #e8eaed;
}

.c2:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c2:hover {
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="false"
      class="c2"
      disabled=""
      id="id"
      name=""
      placeholder="Placeholder"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input of type email 1`] = `
.c2 {
  width: 16px;
  height: 16px;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #19191a;
  border: 2px solid transparent;
}

.c3::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c3::-moz-placeholder {
  color: #9b9c9e;
}

.c3:-ms-input-placeholder {
  color: #9b9c9e;
}

.c3::placeholder {
  color: #9b9c9e;
}

.c3:hover {
  background: #e8eaed;
}

.c3:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#bbbdbf"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="email"
      value="hello@gmail.com"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input of type number 1`] = `
.c2 {
  width: 16px;
  height: 16px;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #19191a;
  border: 2px solid transparent;
}

.c3::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c3::-moz-placeholder {
  color: #9b9c9e;
}

.c3:-ms-input-placeholder {
  color: #9b9c9e;
}

.c3::placeholder {
  color: #9b9c9e;
}

.c3:hover {
  background: #e8eaed;
}

.c3:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#bbbdbf"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="number"
      value="3"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input with an error 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #19191a;
  background: #fff1f1;
  border: 2px solid transparent;
}

.c2::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c2::-moz-placeholder {
  color: #9b9c9e;
}

.c2:-ms-input-placeholder {
  color: #9b9c9e;
}

.c2::placeholder {
  color: #9b9c9e;
}

.c2:hover {
  background: #e8eaed;
}

.c2:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c2:hover {
  background: #ffe1de;
}

.c2:focus {
  border: 2px solid #e9483a;
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="true"
      class="c2"
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input with an icon 1`] = `
.c2 {
  width: 16px;
  height: 16px;
}

.c0 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #19191a;
  border: 2px solid transparent;
}

.c3::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c3::-moz-placeholder {
  color: #9b9c9e;
}

.c3:-ms-input-placeholder {
  color: #9b9c9e;
}

.c3::placeholder {
  color: #9b9c9e;
}

.c3:hover {
  background: #e8eaed;
}

.c3:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#bbbdbf"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;
